Final Deliverables/PERSONAL EXPENSE TRACKER - PNT2022TMID21053/SPRINT_04/kubernetes/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: pet-app
                port:
                  number: 5000
            path: /
            pathType: Prefix
